backend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quote-backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: quote-backend
    spec:
      containers:
        - name: quote-backend
          # image: docker.io/datawire/quote:0.4.1
          image: musman3/backend
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 100Mi
