backend-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: quote-backend
  namespace: backend
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: quote-backend
