ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
  namespace: backend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: flask.kuli.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote
                port:
                  number: 80
    - host: app.usman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote
                port:
                  number: 80




# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-quote
#   namespace: backend
#   # annotations:
#   #   cert-manager.io/issuer: letsencrypt-nginx

# spec:
#   # tls:
#   #   - hosts:
#   #     - usman.abacuslanguages.co.uk  
#   #     secretName: letsencrypt-nginx
#   rules:
#     - host: usman.abacuslanguages.co.uk
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: quote
#                 port:
#                   # number: 8080
#                   number: 80
#     # - host: api.abacuslanguages.co.uk
#     #   http:
#     #     paths:
#     #       - path: /
#     #         pathType: Prefix
#     #         backend:
#     #           service:
#     #             name: quote-backend
#     #             port:
#     #               # number: 8080
#     #               number: 8080
#   ingressClassName: nginx


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-services
#   namespace: backend
#   annotations:
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: quote
#             port:
#               number: 80
